<resources>
    <string name="app_name">EjercicioSQLite</string>
    <string name="btnAlumno">ALUMNO</string>
    <string name="btnProfesor">PROFESOR</string>
    <string name="nombreAlumno">Nombre</string>
    <string name="edadAlumno">Edad</string>
    <string name="cicloAlumno">Ciclo</string>
    <string name="cursoAlumno">Curso</string>
    <string name="notaAlumno">Nota Media</string>
    <string name="btnSaveAlumno">Guardar Datos</string>
    <string name="nombreProfesor">Nombre</string>
    <string name="edadProfesor">Edad</string>
    <string name="cicloProfesor">Ciclo</string>
    <string name="cursoProfesor">Curso Tutor</string>
    <string name="despacho">Despacho</string>
    <string name="btnGuardarProfesor">Guardar Datos</string>
    <string name="elNombre">Nombre</string>
    <string name="elEdad">Edad</string>
    <string name="elCicloAlumno">Ciclo</string>
    <string name="elCursoAlumno">Curso</string>
    <string name="elMedia">Media</string>
    <string name="elNombreProfesor">Nombre</string>
    <string name="elEdadProfesor">Edad</string>
    <string name="elCicloProfesor">Ciclo</string>
    <string name="elCursoProfesor">Curso</string>
    <string name="elDespachoProfesor">Despacho</string>
    <string name="alert">Eliminar Elemento</string>
    <string name="noButton">NO</string>
    <string name="yesButton">SI</string>
    <string name="textDeleteDB">Eliminar Base de Datos</string>
    <string name="borradoDB">BORRAR DATOS</string>
    <string name="btnListado">LISTAR ELEMENTOS</string>
    <string name="nombreQuery">Nombre</string>
    <string name="edadQuery">Edad</string>
    <string name="cicloQuery">Ciclo</string>
    <string name="cursoQuery">Curso</string>
    <string name="notaQuery">Nota Media</string>
    <string name="despachoQuery">Despacho</string>
    <string name="queryText">Consulta</string>
    <string name="btnConsulta">Buscar</string>
    <string name="porNombre">Nombre</string>
    <string name="porEdad">Edad</string>
    <string name="toolEdad">Buscar por Edad</string>
    <string name="toolNombre">Buscar por Nombre</string>
    <string name="porCiclo">Ciclo</string>
    <string name="porCurso">Curso</string>
    <string name="porMedia">Media</string>
    <string name="btnListar">Listar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnLimpiar">Limpiar</string>
    <string name="btnListadoAll">Listar Elementos</string>
    <string name="btnccAlumno">C+C</string>
    <string name="btnDespacho">Despacho</string>
    <string name="idAlumno">ID</string>
    <string name="listNombreAlumno">Nombre Alumno</string>
    <string name="listEdadAlumno">Edad Alumno</string>
    <string name="listCicloAlumno">Ciclo Alumno</string>
    <string name="listCursoAlumno">Curso Alumno</string>
    <string name="listNota">Nota Media</string>
    <string name="listTituloAlumno">ALUMNO</string>
    <string name="listTituloProfesor">PROFESOR</string>
    <string name="listNombreProfesor">Nombre Profesor</string>
    <string name="listEdadProfesor">Edad Profesor</string>
    <string name="listCicloProfesor">Ciclo Profesor</string>
    <string name="listCursoProfesor">Curso Profesor</string>
    <string name="listDespacho">Despacho</string>
    <string name="idProfesor">ID</string>
    <string name="qAlumnoNombre">Nombre</string>
    <string name="qNombreAlumno">Nombre</string>
</resources>
