<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeProfesor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.josevicente.ejerciciosqlite.ActivityProfesor">

    <LinearLayout
        android:id="@+id/linearProfesor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/idProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/idProfesor"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/nombreProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombreProfesor"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/edadProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/edadProfesor"
            android:inputType="number" />

        <EditText
            android:id="@+id/cicloProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cicloProfesor"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/cursoProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cursoProfesor"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/despacho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/despacho"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnGuradarProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/rounded_cornerbtn"
            android:padding="5dp"
            android:text="@string/btnGuardarProfesor"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TableRow
            android:id="@+id/table1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnNombreProfesor"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/porNombre"
                android:tooltipText="@string/toolNombre" />

            <Button
                android:id="@+id/btnEdadProfesor"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/porEdad"
                android:tooltipText="@string/toolEdad" />

            <Button
                android:id="@+id/btnccProfesor"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnccAlumno" />
        </TableRow>

        <TableRow
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table2">

            <Button
                android:id="@+id/btnCicloProfesor"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/porCiclo"
                android:tooltipText="Por Ciclo" />

            <Button
                android:id="@+id/btnCursoProfesor"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/porCurso"
                android:tooltipText="Por Curso" />

            <Button
                android:id="@+id/btnDespacho"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnDespacho"
                android:tooltipText="Por Despacho" />

        </TableRow>

        <TableRow
            android:id="@+id/table3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/btnListarProfesor"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnListar"
                android:tooltipText="Listar" />

            <Button
                android:id="@+id/btnEliminarProfesor"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnEliminar"
                android:tooltipText="Eliminar" />

            <Button
                android:id="@+id/btnLimpiarProfesor"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_button"
                android:text="@string/btnLimpiar"
                android:tooltipText="Limpiar" />
        </TableRow>

        <ListView
            android:id="@+id/listViewProfesor"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/holo_red_dark"
            android:scrollbars="vertical">

        </ListView>
    </LinearLayout>
</RelativeLayout>
