<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/cardVewProfesorID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/relativeProfesor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/elNombreProfesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elNombreProfesor" />

            <TextView
                android:id="@+id/elEdadProfesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elEdadProfesor"
                android:layout_below="@id/elNombreProfesor"/>

            <TextView
                android:id="@+id/elCicloProfesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elCicloProfesor"
                android:layout_below="@id/elEdadProfesor"/>

            <TextView
                android:id="@+id/elCursoProfesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elCursoProfesor"
                android:layout_below="@id/elCicloProfesor"/>

            <TextView
                android:id="@+id/elDespachoProfesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/elDespachoProfesor"
                android:layout_below="@id/elCursoProfesor"/>

            <TableRow
                android:id="@+id/tableProfesor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/elDespachoProfesor"
                android:layout_alignParentEnd="true">

                <Button
                    android:id="@+id/eliminarProfesor"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@android:drawable/ic_delete" />

            </TableRow>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>