<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/textAlert"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingTop="5dp"
                android:text="@string/alert"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp" />

            <Button
                android:id="@+id/noButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textAlert"
                android:layout_marginTop="27dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/noButton"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/yesButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/noButton"
                android:layout_alignBottom="@+id/noButton"
                android:layout_alignParentEnd="true"
                android:background="@android:color/holo_red_dark"
                android:text="@string/yesButton"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>