<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/relativeDelete"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray">

            <TextView
                android:id="@+id/textDeleteID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:gravity="center"
                android:text="@string/textDeleteDB"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/noDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textDeleteID"
                android:layout_marginStart="54dp"
                android:layout_marginTop="27dp"
                android:background="@android:color/holo_green_dark"
                android:padding="5dp"
                android:text="@string/noButton"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

            <Button
                android:id="@+id/yesDeeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/noDeleteButton"
                android:layout_alignBottom="@+id/noDeleteButton"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="42dp"
                android:background="@android:color/holo_red_dark"
                android:padding="5dp"
                android:text="@string/yesButton"
                android:textColor="@android:color/background_light"
                android:textSize="18sp" />

        </RelativeLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>